prost-canonical-serde/tests/ui/unsupported_bound.stderr
error: unsupported serde container attribute `bound`
 --> tests/ui/unsupported_bound.rs:9:9
  |
9 | #[serde(bound(serialize = "T: MySerTrait", deserialize = "T: MyDeTrait"))]
  |         ^^^^^
